unpackaged/main/default/objects/Quote/fields/AllBablo__c.field-meta.xml
<CustomField>
    <fullName>AllBablo__c</fullName>
    <formula>Puskonaladka__c + TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ВСЕГО К ОПЛАТЕ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>