unpackaged/main/default/objects/Quote/fields/CreatingDate__c.field-meta.xml
<CustomField>
    <fullName>CreatingDate__c</fullName>
    <label>Дата создания сметы</label>
    <type>Date</type>
</CustomField>