unpackaged/main/default/objects/Quote/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <description>Срок действия коммерческого предложения</description>
    <label>КП действительно в течение</label>
    <length>50</length>
    <type>Text</type>
</CustomField>