unpackaged/main/default/objects/Quote/fields/ManagerName__c.field-meta.xml
<CustomField>
    <fullName>ManagerName__c</fullName>
    <label>ФИО Директора Тион</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Н.Л. Литвин_</fullName>
                <default>true</default>
                <label>Н.Л. Литвин ______________по Доверенности № 03 от 09.01.2019 г.</label>
            </value>
            <value>
                <fullName>О.В. Колмакова</fullName>
                <label>Колмакова О.В. ____________по Доверенности № 04 от 09.01.2019 г.</label>
            </value>
            <value>
                <fullName>В.Ю. Павлов</fullName>
                <label>по Доверенности № 24 от 23.01.2018 г    _____________В.Ю.Павлов</label>
            </value>
            <value>
                <fullName>В.А. Фольц</fullName>
                <label>В.А. Фольц на основании Доверенности №13 от 15 июня 2017 г.</label>
            </value>
            <value>
                <fullName>М.А. Амелькин</fullName>
            </value>
            <value>
                <fullName>М.Ю. Данилов</fullName>
            </value>
            <value>
                <fullName>Е.А. Гребенюк</fullName>
            </value>
            <value>
                <fullName>Н.Л. Литвин</fullName>
                <label>По Доверенности №89 от 28.08.2018 г.________________Н.Л. Литвин</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>