unpackaged/main/default/objects/Quote/fields/ManagerPosition__c.field-meta.xml
<CustomField>
    <fullName>ManagerPosition__c</fullName>
    <label>Должность руководителя Тион</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ManagerName__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Генеральный директор</fullName>
            </value>
            <value>
                <fullName>Исполнительный директор</fullName>
            </value>
            <value>
                <fullName>Заместитель директора</fullName>
            </value>
            <value>
                <fullName>Директор по развитию</fullName>
            </value>
            <value>
                <fullName>Руководитель сервисной службы</fullName>
            </value>
            <value>
                <fullName>Руководитель направления</fullName>
            </value>
            <value>
                <fullName>Коммерческий директор</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>