unpackaged/main/default/objects/Quote/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Организация</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Сметы</relationshipLabel>
    <relationshipName>OrganisationQuotes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>