unpackaged/main/default/objects/Quote/fields/ProductionTime__c.field-meta.xml
<CustomField>
    <fullName>ProductionTime__c</fullName>
    <inlineHelpText>Например, &quot;60 рабочих дней с даты оплаты&quot;</inlineHelpText>
    <label>Срок производства</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 рабочий день</fullName>
            </value>
            <value>
                <fullName>1,5 месяца</fullName>
            </value>
            <value>
                <fullName>10 дней</fullName>
            </value>
            <value>
                <fullName>10 р.д.</fullName>
            </value>
            <value>
                <fullName>10 раб. дней после написания запроса на шеф-монтаж</fullName>
            </value>
            <value>
                <fullName>10 рабочих дней</fullName>
            </value>
            <value>
                <fullName>10 рабочих дней (при отсутсвие на складе)</fullName>
            </value>
            <value>
                <fullName>10 рабочих дней (при отсутствии на складе)</fullName>
            </value>
            <value>
                <fullName>10 рабочих дней в Новосибирске</fullName>
            </value>
            <value>
                <fullName>10 рабочих дней после оплаты</fullName>
            </value>
            <value>
                <fullName>11 рабочих дней</fullName>
            </value>
            <value>
                <fullName>12 рабочих дней</fullName>
            </value>
            <value>
                <fullName>125 рабочих дней</fullName>
            </value>
            <value>
                <fullName>14 рабочих дней</fullName>
            </value>
            <value>
                <fullName>15 раб дней</fullName>
            </value>
            <value>
                <fullName>15 рабочих дне</fullName>
            </value>
            <value>
                <fullName>15 рабочих дней</fullName>
            </value>
            <value>
                <fullName>15 рабочих дней (при отсутствии на складе)</fullName>
            </value>
            <value>
                <fullName>15 рабочих дней в Новосибирске</fullName>
            </value>
            <value>
                <fullName>15 рабочих дней, часто бывают в наличии на складе</fullName>
            </value>
            <value>
                <fullName>16 рабочих дней</fullName>
            </value>
            <value>
                <fullName>17 рабочих дней</fullName>
            </value>
            <value>
                <fullName>18 рабочих дней</fullName>
            </value>
            <value>
                <fullName>2 месяца</fullName>
            </value>
            <value>
                <fullName>2 недели</fullName>
            </value>
            <value>
                <fullName>2 рабочих дня</fullName>
            </value>
            <value>
                <fullName>20 рабочих дней</fullName>
            </value>
            <value>
                <fullName>20 календарных дней</fullName>
            </value>
            <value>
                <fullName>20 рабочих дней (при отсутствии на складе)</fullName>
            </value>
            <value>
                <fullName>21 календарный день</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>