unpackaged/main/default/objects/Quote/fields/Puskonaladka__c.field-meta.xml
<CustomField>
    <fullName>Puskonaladka__c</fullName>
    <label>Пусконаладка</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>