unpackaged/main/default/objects/Quote/fields/PuskonaladkaSnds__c.field-meta.xml
<CustomField>
    <fullName>PuskonaladkaSnds__c</fullName>
    <formula>SUBSTITUTE(TEXT(Puskonaladka__c), &quot;.&quot;, &quot;,&quot;)   &amp; &quot; руб., включая НДС 20%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Стоимость работ по пуско-наладке</label>
    <type>Text</type>
</CustomField>