unpackaged/main/default/objects/Quote/fields/SpecialText__c.field-meta.xml
<CustomField>
    <fullName>SpecialText__c</fullName>
    <label>Особые условия</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>