unpackaged/main/default/objects/Quote/fields/TaxAmount10__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount10__c</fullName>
    <formula>TotalEquip__c * 10/110</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Сумма за оборудование(только Ламинары) с НДС 10%</inlineHelpText>
    <label>в т.ч. НДС(10%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>