unpackaged/main/default/objects/Quote/fields/TaxAmount18__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount18__c</fullName>
    <formula>TotalEquip__c * 18/118</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>в т.ч. НДС(18%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>