unpackaged/main/default/objects/Quote/fields/TaxAmount20__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount20__c</fullName>
    <formula>TotalEquip__c * 20/120</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>в т.ч. НДС(20%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>