unpackaged/main/default/objects/Quote/fields/TotalEquip__c.field-meta.xml
<CustomField>
    <fullName>TotalEquip__c</fullName>
    <formula>TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Итого за оборудование</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>