unpackaged/main/default/objects/Quote/fields/TotalEquipBezNDS__c.field-meta.xml
<CustomField>
    <fullName>TotalEquipBezNDS__c</fullName>
    <formula>TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Итого за оборудование, без НДС</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>