unpackaged/main/default/objects/Quote/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник ответственный за Смету</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Сметы</relationshipLabel>
    <relationshipName>mDWD</relationshipName>
    <type>Lookup</type>
</CustomField>