unpackaged/main/default/objects/Quote/validationRules/Proektirovshik.validationRule-meta.xml
<ValidationRule>
    <fullName>Proektirovshik</fullName>
    <active>true</active>
    <description>Проектировщик не может создавать сметы</description>
    <errorConditionFormula>$Profile.Name  == &#39;Проектировщик&#39;</errorConditionFormula>
    <errorMessage>Вам запрещено создавать и редактировать сметы</errorMessage>
</ValidationRule>