unpackaged/main/default/objects/Quote/validationRules/StageName.validationRule-meta.xml
<ValidationRule>
    <fullName>StageName</fullName>
    <active>true</active>
    <description>Пожалуйста, переведите проект
к этапу “КП Проектировщику” прежде чем добавлять сметы к проекту</description>
    <errorConditionFormula>ISPICKVAL(Opportunity.StageName, &#39;Отслеживание конкурса на проектирование&#39; ) ||
 ISPICKVAL(Opportunity.StageName, &#39;Переговоры с проектировщиком&#39;) ||
 ISPICKVAL(Opportunity.StageName, &#39;Подбор оборудования&#39;)</errorConditionFormula>
    <errorMessage>Пожалуйста, переведите проект
к этапу “КП Проектировщику” прежде чем добавлять сметы к проекту</errorMessage>
</ValidationRule>